kubernetes/nginx/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-nodes-ingress
  namespace: nginx
spec:
  rules:
  - http:
       paths:
      - pathType: Prefix
        path: /nginx
        backend:
          service:
            - nginx-service
